fix add bottom spacing for youtube video
added a new class .youtube-player-parent where the margin-bottom is
applied. I had to take the original styling code and apply it to the
custom css class so i don't mess up existing styles

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -32,6 +32,17 @@ figure {
     margin-bottom: $spacing-unit;
 }
 
+.youtube-player-parent {
+    margin-bottom: $spacing-unit;
+
+    // hugo's css code
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
 a {
     color: $color-text;
     text-decoration-color: $color-textunderline;
